project entire refactoring duplicate & unnecessary code/file delete + improve effectively structor global/directory class 26/06/12